Added in Pop3/Imap support

--- a/.envrc
+++ b/.envrc
@@ -1,11 +1,12 @@
 # Load .env variables if present
+export NIXPKGS_ALLOW_UNFREE=1
 if [ -f .env ]; then
   export $(grep -v '^#' .env | xargs)
 fi
 
 # If flake.nix exists, use flake
 if [ -f flake.nix ]; then
-  use flake
+  use flake --impure
 # Else fallback to traditional shell.nix if present
 elif [ -f shell.nix ]; then
   use nix
